yoshimi 1.5.1.1

2017-4-16 Will
* Part 'kit' is no longer ORed with 32 for some controls
  instead 'insert' is set to 32 for these.
* Added more error checks and warnings.
* Updated docs.

2017-4-15 Will
* Implemented Gui access to 7 bit NRPNs.
* Revised Midi-learn window.
* Corrected some Cli numbering.

2017-4-14 Will
* Revised Gui new instance selection.
  Only 1 menu entry needed now.
* Revised Midi-learn min/max - now percentages.
  Resolution is now 0.5% :)

2017-4-13 Will
* Revised Cli access to Midi-learn.
* Implemented 7bit NRPNs (not Gui changeable).
* Updated docs.
* Bugfix: Loading Midi-learn files was setting learn mode.
* Bugfix: CLI error when changing Midi-learned channels.

2017-4-9 Will
* Bugfix: Wrong size buffer used for jack audio
  causing overwrites if internal < nframes.
* Set version 1.5.1.1

2017-3-30 Will
* Finalised all code and docs for release.
* Set version 1.5.1

2017-3-29 Will
* Edited ccmake option names for more logical sequence.
* Created INSTALL_CUSTOM info file.
* Removed unused, and commented-out code.
  No fuctional changes.

2017-3-26 Will
* Corrected anomaly with some float to bool conversions.
  Changed varable in 'interchange' to make this clearer.
* Activated Midi-learn for portamento enable & rate.
* Set master as 1.5.1 rc5

2017-3-22 Will
* Doc updates and moves ready for release.
* Added two new instruments to Will_Godfrey_Companion
* New splash image included in Utils.
* Merged in jack latency fixes from Rob.
* Re-instated '03' Neon ccmake option.
* Doc updates - again!
* Set master as 1.5.1 rc4
* It's ohh three not zero three !!!
  Now done right.

2017-3-22 Jesper
* Master window: Added subclassed Fl_Menu_Bar which only draws the bottom border.
  Now it is not necessary to use negative coordinates to hide the edges.
* VUMeter no longer swallows all shortcut/keyboard events.
* Added missing hotkeys/mnemonics and fixed conflicting ones.

2017-3-21 Will
* Added correction for startup part connection status from Rob.